--- a/style.css
+++ b/style.css
@@ -71,15 +71,17 @@ body{
 
 .card {
     display: none;
-    margin-top: 40%;
-    position: absolute;
+    margin-top: 0 auto;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
     border-radius: 8px;
+    transform: translate(-50%, -50%
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    z-index: 10;
 }
 .card h2{
     margin: 0;
@@ -95,4 +97,26 @@ body{
 
 #del{
     font-size: 9px;
+}
+@media (max-width: 600px) {
+    .button {
+        padding: 10px;
+    }
+
+    .card {
+        width: 80%;
+        padding: 10px;
+    }
+
+    .card h2 {
+        font-size: 20px;
+    }
+
+    .card p {
+        font-size: 14px;
+    }
+
+    .close-btn {
+        padding: 8px;
+    }
 }
