--- a/style.css
+++ b/style.css
@@ -71,17 +71,15 @@ body{
 
 .card {
     display: none;
-    margin-top: 0 auto;
-    position: fixed;
+    margin-top: 10%;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
     border-radius: 8px;
-    transform: translate(-50%, -50%
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    z-index: 10;
 }
 .card h2{
     margin: 0;
@@ -97,19 +95,4 @@ body{
 
 #del{
     font-size: 9px;
-}
-@media (max-width: 600px) {
-
-    .card {
-        width: 80%;
-        padding: 10px;
-    }
-
-    .card h2 {
-        font-size: 20px;
-    }
-
-    .close-btn {
-        padding: 8px;
-    }
 }
