--- a/style.css
+++ b/style.css
@@ -71,8 +71,8 @@ body{
 
 .card {
     display: none;
-    margin-top: 10%;
-    position: absolute;
+    margin-top: 30vh;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
