--- a/style.css
+++ b/style.css
@@ -73,13 +73,17 @@ body{
     display: none;
     margin-top: 30vh;
     position: fixed;
-    top: 80%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    display: grid;
+    place-items: center;
+    text-align: center;
+    gap: 10px;
 }
 .card h2{
     margin: 0;
