--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
 .card {
     display: none;
     margin-top: 30vh;
-
+    position: fixed;
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
